update tmux copy mode

--- a/.config/tmux/tmux.reset.conf
+++ b/.config/tmux/tmux.reset.conf
@@ -5,7 +5,7 @@ bind ^X lock-server
 bind ^C new-window -c "$HOME"
 bind ^D detach
 bind * list-clients
-bind V copy-mode
+bind -n C-v copy-mode
 
 bind H previous-window
 bind L next-window
