update allacrity config

--- a/.config/tmux/tmux.configs.conf
+++ b/.config/tmux/tmux.configs.conf
@@ -30,3 +30,10 @@ set -g @catppuccin_directory_text "#{b:pane_current_path}"
 set -g @catppuccin_meetings_text "#($HOME/.config/tmux/scripts/cal.sh)"
 set -g @catppuccin_date_time_text "%H:%M"
 
+#ssh-split-h-key
+set -g @ssh-split-v-key 'C-s'     # Prefix + s for vertical split (same as yours)
+set -g @ssh-split-h-key 'v'     # Prefix + v for horizontal split (same as yours)
+#
+# # Keep current directory behavior (like your -c "#{pane_current_path}")
+set -g @ssh-split-keep-cwd "true"
+set -g @ssh-split-keep-remote-cwd "true"
