--- a/.config/alacritty/alacritty.toml
+++ b/.config/alacritty/alacritty.toml
@@ -3,11 +3,12 @@
 TERM = "xterm-256color"
 
 [window]
+decorations = "buttonless"
+
 padding.x = 10
 padding.y = 10
 opacity = 0.7
 blur = true
-
 # Ativar Option como Alt
 option_as_alt = "Both"
 
