--- a/.config/tmux/tmux.import.conf
+++ b/.config/tmux/tmux.import.conf
@@ -9,3 +9,4 @@ set -g @plugin 'sainnhe/tmux-fzf'
 set -g @plugin 'wfxr/tmux-fzf-url'
 set -g @plugin 'omerxx/catppuccin-tmux'
 set -g @plugin 'omerxx/tmux-floax'
+set -g @plugin 'pschmitt/tmux-ssh-split'
