--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -20,3 +20,6 @@ set -g pane-border-style 'fg=brightblack,bg=default'
 
 
 run '~/.config/tmux/plugins/tpm/tpm'
+
+# Override plugin keybindings (must be after tpm)
+bind C-r command-prompt "rename-session %%"
