--- a/.config/tmux/tmux.reset.conf
+++ b/.config/tmux/tmux.reset.conf
@@ -9,6 +9,8 @@ bind L next-window
 
 bind r command-prompt "rename-window %%"
 bind R source-file ~/.config/tmux/tmux.conf
+bind C-r command-prompt "rename-session %%"
+# bind C-R run-shell ~/.config/tmux/plugins/tmux-resurrect/scripts/restore.sh
 bind ^A last-window
 bind ^W list-windows
 bind z resize-pane -Z
